testing/aspnetapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:

  name: aspnetapp-route
spec:
  parentRefs:
  - name: gateway-01
    namespace: alb-test-infra
  rules:
  - backendRefs:
    - name: aspnetapp
      port: 80
