testing/aspnetapp/ingress.yaml
# https://github.com/Azure/application-gateway-kubernetes-ingress/blob/master/docs/annotations.md

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
  #   kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /aspnetapp
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
        pathType: Exact
